--- a/public/durian/html/xdmin/member/memberList5.html
+++ b/public/durian/html/xdmin/member/memberList5.html
@@ -62,8 +62,7 @@
 			</div>
 			<div class="row box-white collapse show" id="firstRow">
 				<div class="col-10 col-md-10 fs-4 mb-2 d-md-none">Coupang Management System</div>
-				<div class="col col-md text-end d-md-none">
-				</div>
+				<div class="col col-md text-end d-md-none"></div>
 			</div>
 
 			<!-- offcanvas start -->
@@ -72,7 +71,7 @@
 				id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
 
 				<div class="offcanvas-header">
-					<img class="bi me-2" width="120" height="30" src="../../../images/xdmin/coupang.png"> </img>
+					<img class="bi me-2" width="120" height="30" src="../../../images/xdmin/coupang.png">
 					<h3 class="offcanvas-title" id="offcanvasScrollingLabel">Admin Menu</h3>
 					<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 				</div>
@@ -87,7 +86,7 @@
 						<ul class="list-unstyled ps-0">
 							<li class="mb-1"><a href="#" class="btn btn-toggle align-items-center rounded collapsed"
 								data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="false">Home</a>
-								<div class="collapse" id="home-collapse" style="">
+								<div class="collapse" id="home-collapse">
 									<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
 										<li><a href="#" class="link-dark rounded">Overview</a></li>
 										<li><a href="#" class="link-dark rounded">Updates</a></li>
@@ -147,28 +146,30 @@
 			<!-- offcanvas end -->
 
 
-			
+
 			<div class="row bg-secondary">
-				<ul class="col nav">
-					<li class="nav-item"><a class="nav-link link-light">관리자화면</a></li>
-					<li class="nav-item"><a class="nav-link link-light" href="#">Features</a></li>
-					<li class="nav-item"><a class="nav-link link-light" href="#">시스템 관리</a></li>
-					<li class="nav-item dropdown"><a class="nav-link link-light dropdown-toggle" href="#"
-						data-bs-toggle="dropdown">Dropdown</a>
-						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="#">Action</a></li>
-							<li><a class="dropdown-item" href="#">Another Action</a></li>
-							<li><a class="dropdown-item" href="#">Something else here</a></li>
-						</ul></li>
-				</ul>
-				<div class="col-1 d-flex justify-content-end">
+				<div class="col">
+					<ul class="nav">
+						<li class="nav-item"><a class="nav-link link-light">관리자화면</a></li>
+						<li class="nav-item"><a class="nav-link link-light" href="#">Features</a></li>
+						<li class="nav-item"><a class="nav-link link-light" href="#">시스템 관리</a></li>
+						<li class="nav-item dropdown"><a class="nav-link link-light dropdown-toggle" href="#"
+							data-bs-toggle="dropdown">Dropdown</a>
+							<ul class="dropdown-menu">
+								<li><a class="dropdown-item" href="#">Action</a></li>
+								<li><a class="dropdown-item" href="#">Another Action</a></li>
+								<li><a class="dropdown-item" href="#">Something else here</a></li>
+							</ul></li>
+					</ul>
+				</div>
+				<div class="col d-flex justify-content-end">
 					<button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling">
 						<i class="bi bi-list"></i>
 					</button>
 				</div>
 			</div>
-			
-			 
+
+
 			<!-- NavBar 수정할 거 -->
 			<!-- 
 			<div class="row d-flex align-items-center bg-secondary">
