--- a/public/durian/html/xdmin/member/memberList5.html
+++ b/public/durian/html/xdmin/member/memberList5.html
@@ -304,7 +304,7 @@
 							<div class="col-12 col-md-2 fw-bold">ㆍ검색어</div>
 							<div class="col-md-10">
 
-								<div class="row g-3">
+								<div class="row g-3 d-flex align-items-center">
 									<div class="col-4 col-md-2">
 										<select class="form-select form-select-sm">
 											<option>이름</option>
