--- a/public/durian/html/xdmin/member/memberForm.html
+++ b/public/durian/html/xdmin/member/memberForm.html
@@ -13,9 +13,6 @@
 
 <body>
 
-
-
-
 	<form>
 		<div class="container-fluid bg-light">
 
@@ -230,7 +227,7 @@
 			</div>
 			 -->
 		</div>
-		
+
 		<div class="container-fluid bg-light py-3">
 
 			<div class="width90">
@@ -249,8 +246,7 @@
 
 				<div class="row">
 					<div class="col-12 col-sm-5">
-						아이디
-						<input type="text" class="form-control my-2" placeholder="영문(대소문자),숫자,특수문자">
+						아이디 <input type="text" class="form-control my-2" placeholder="영문(대소문자),숫자,특수문자">
 					</div>
 				</div>
 				<div class="row row-cols-2">
@@ -332,8 +328,7 @@
 
 
 				</div>
-				<br>
-				<br>
+				<br> <br>
 				<nav>
 					<ul class="pagination justify-content-center">
 						<li class="page-item disabled"><a class="page-link" href="#">1</a></li>
@@ -341,13 +336,13 @@
 					</ul>
 				</nav>
 
-				<br> 
+				<br>
 
 			</div>
 		</div>
 
 
-	<!-- footer -->
+		<!-- footer -->
 
 		<div class="container-fluid">
 			<footer class="py-3 my-4">
