--- a/public/durian/html/user/mainPage.html
+++ b/public/durian/html/user/mainPage.html
@@ -51,12 +51,14 @@
 					</div>
 					<div class="col-8">
 						<div class="input-group">
-							<select class="form-select">
-								<option selected>카테고리</option>
-								<option value="1">One</option>
-								<option value="2">Two</option>
-								<option value="3">Three</option>
-							</select>
+							<div class="col-2">
+								<select class="form-select">
+									<option selected>카테고리</option>
+									<option value="1">One</option>
+									<option value="2">Two</option>
+									<option value="3">Three</option>
+								</select>
+							</div>
 							<input class="form-control" type="text" placeholder="찾고 싶은 상품을 검색해보세요!">
 							<button class="btn btn-outline-secondary" type="button">검색</button>
 						</div>
@@ -86,17 +88,16 @@
 		</div>
 
 		<!-- 광고 carousel s -->
-
 		<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active" data-bs-interval="100">
-					<img src="../../images/user/mainPage/ad1.jpg" class="d-block w-100" alt="...">
+					<img src="../../images/user/mainPage/ad1.jpg" class="d-block w-120" alt="...">
 				</div>
 				<div class="carousel-item" data-bs-interval="2000">
-					<img src="../../images/user/mainPage/ad2.jpg" class="d-block w-100" alt="...">
+					<img src="../../images/user/mainPage/ad2.jpg" class="d-block w-120" alt="...">
 				</div>
 				<div class="carousel-item">
-					<img src="../../images/user/mainPage/ad3.jpg" class="d-block w-100" alt="...">
+					<img src="../../images/user/mainPage/ad3.jpg" class="d-block w-120" alt="...">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -107,6 +108,66 @@
 			</button>
 		</div>
 		<!-- 광고 carousel e -->
+
+		<div class="row row-cols-1 row-cols-md-5 my-3 text-center">
+			<div class="col">
+				<div class="card mb-4 rounded-3 shadow-sm">
+					<div class="card-header py-3">
+						<h4 class="my-0 fw-normal">Free</h4>
+					</div>
+					<div class="card-body">
+						<h1 class="card-title pricing-card-title">
+							$0<small class="text-muted fw-light">/mo</small>
+						</h1>
+						<ul class="list-unstyled mt-3 mb-4">
+							<li>10 users included</li>
+							<li>2 GB of storage</li>
+							<li>Email support</li>
+							<li>Help center access</li>
+						</ul>
+						<button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card mb-4 rounded-3 shadow-sm">
+					<div class="card-header py-3">
+						<h4 class="my-0 fw-normal">Pro</h4>
+					</div>
+					<div class="card-body">
+						<h1 class="card-title pricing-card-title">
+							$15<small class="text-muted fw-light">/mo</small>
+						</h1>
+						<ul class="list-unstyled mt-3 mb-4">
+							<li>20 users included</li>
+							<li>10 GB of storage</li>
+							<li>Priority email support</li>
+							<li>Help center access</li>
+						</ul>
+						<button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card mb-4 rounded-3 shadow-sm border-primary">
+					<div class="card-header py-3 text-white bg-primary border-primary">
+						<h4 class="my-0 fw-normal">Enterprise</h4>
+					</div>
+					<div class="card-body">
+						<h1 class="card-title pricing-card-title">
+							$29<small class="text-muted fw-light">/mo</small>
+						</h1>
+						<ul class="list-unstyled mt-3 mb-4">
+							<li>30 users included</li>
+							<li>15 GB of storage</li>
+							<li>Phone and email support</li>
+							<li>Help center access</li>
+						</ul>
+						<button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
+					</div>
+				</div>
+			</div>
+		</div>
 
 	</div>
 
