--- a/public/durian/html/user/mainPage.html
+++ b/public/durian/html/user/mainPage.html
@@ -24,7 +24,8 @@
 							<li><a class="dropdown-item" href="#">여행·티켓</a></li>
 							<li><a class="dropdown-item" href="#">로켓배송</a></li>
 							<li><a class="dropdown-item" href="#">제휴마케팅</a></li>
-						</ul></li>
+						</ul>
+					</li>
 				</ul>
 			</div>
 			<div class="col d-flex justify-content-end">
@@ -39,8 +40,8 @@
 
 		<div class="row">
 
-			<div class="col d-flex justify-content-center">
-				<button class="btn btn-lg btn-primary">카테고리</button>
+			<div class="col d-flex justify-content-end">
+				<button><!--  class="btn btn-lg btn-primary" --><i class="bi bi-list fs-2"></i><br>카테고리</button>
 			</div>
 
 			<div class="col-10">
@@ -49,7 +50,7 @@
 					<div class="col-2">
 						<img src="../../images/user/mainPage/coupang2.png" style="width: 200px;">
 					</div>
-					<div class="col-8">
+					<div class="col-6">
 						<div class="input-group">
 							<div class="col-2">
 								<select class="form-select">
@@ -60,12 +61,12 @@
 								</select>
 							</div>
 							<input class="form-control" type="text" placeholder="찾고 싶은 상품을 검색해보세요!">
-							<button class="btn btn-outline-secondary" type="button">검색</button>
+							<button class="btn btn-outline-secondary" type="button"><i class="bi bi-search"></i></button>
 						</div>
 					</div>
 					<div class="col-2">
-						<button>마이쿠팡</button>
-						<button>장바구니</button>
+						<button><i class="bi bi-person"></i><br>마이쿠팡</button>
+						<button><i class="bi bi-cart4"></i><br>장바구니</button>
 					</div>
 
 				</div>
