--- a/public/durian/html/user/mainPage.html
+++ b/public/durian/html/user/mainPage.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="uTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>메인페이지</title>
+<title>쿠팡!</title>
 <link rel="stylesheet" href="../../bootstrap/bootstrap-5.1.3-dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 <link rel="stylesheet" href="../../css/style.css">
@@ -117,210 +117,23 @@
 			</button>
 		</div>
 		<!-- 광고 carousel e -->
-
-		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-			<div class="carousel-indicators">
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-					aria-current="true" aria-label="Slide 1"></button>
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-			</div>
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<div class="row row-cols-1 row-cols-md-5 my-3 justify-content-center text-center">
-						<div class="col">
-							<div class="card mb-4 rounded-3 shadow-sm">
-								<div class="card-header py-3">
-									<h4 class="my-0 fw-normal">Free</h4>
-								</div>
-								<div class="card-body">
-									<h1 class="card-title pricing-card-title">
-										$0<small class="text-muted fw-light">/mo</small>
-									</h1>
-									<ul class="list-unstyled mt-3 mb-4">
-										<li>10 users included</li>
-										<li>2 GB of storage</li>
-										<li>Email support</li>
-										<li>Help center access</li>
-									</ul>
-									<button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
-								</div>
-							</div>
-						</div>
-						<div class="col">
-							<div class="card mb-4 rounded-3 shadow-sm">
-								<div class="card-header py-3">
-									<h4 class="my-0 fw-normal">Pro</h4>
-								</div>
-								<div class="card-body">
-									<h1 class="card-title pricing-card-title">
-										$15<small class="text-muted fw-light">/mo</small>
-									</h1>
-									<ul class="list-unstyled mt-3 mb-4">
-										<li>20 users included</li>
-										<li>10 GB of storage</li>
-										<li>Priority email support</li>
-										<li>Help center access</li>
-									</ul>
-									<button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
-								</div>
-							</div>
-						</div>
-						<div class="col">
-							<div class="card mb-4 rounded-3 shadow-sm border-primary">
-								<div class="card-header py-3 text-white bg-primary border-primary">
-									<h4 class="my-0 fw-normal">Enterprise</h4>
-								</div>
-								<div class="card-body">
-									<h1 class="card-title pricing-card-title">
-										$29<small class="text-muted fw-light">/mo</small>
-									</h1>
-									<ul class="list-unstyled mt-3 mb-4">
-										<li>30 users included</li>
-										<li>15 GB of storage</li>
-										<li>Phone and email support</li>
-										<li>Help center access</li>
-									</ul>
-									<button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<div class="row row-cols-1 row-cols-md-5 my-3 justify-content-center text-center">
-						<div class="col">
-							<div class="card mb-4 rounded-3 shadow-sm">
-								<div class="card-header py-3">
-									<h4 class="my-0 fw-normal">Free</h4>
-								</div>
-								<div class="card-body">
-									<h1 class="card-title pricing-card-title">
-										$0<small class="text-muted fw-light">/mo</small>
-									</h1>
-									<ul class="list-unstyled mt-3 mb-4">
-										<li>10 users included</li>
-										<li>2 GB of storage</li>
-										<li>Email support</li>
-										<li>Help center access</li>
-									</ul>
-									<button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
-								</div>
-							</div>
-						</div>
-						<div class="col">
-							<div class="card mb-4 rounded-3 shadow-sm">
-								<div class="card-header py-3">
-									<h4 class="my-0 fw-normal">Pro</h4>
-								</div>
-								<div class="card-body">
-									<h1 class="card-title pricing-card-title">
-										$15<small class="text-muted fw-light">/mo</small>
-									</h1>
-									<ul class="list-unstyled mt-3 mb-4">
-										<li>20 users included</li>
-										<li>10 GB of storage</li>
-										<li>Priority email support</li>
-										<li>Help center access</li>
-									</ul>
-									<button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
-								</div>
-							</div>
-						</div>
-						<div class="col">
-							<div class="card mb-4 rounded-3 shadow-sm border-primary">
-								<div class="card-header py-3 text-white bg-primary border-primary">
-									<h4 class="my-0 fw-normal">Enterprise</h4>
-								</div>
-								<div class="card-body">
-									<h1 class="card-title pricing-card-title">
-										$29<small class="text-muted fw-light">/mo</small>
-									</h1>
-									<ul class="list-unstyled mt-3 mb-4">
-										<li>30 users included</li>
-										<li>15 GB of storage</li>
-										<li>Phone and email support</li>
-										<li>Help center access</li>
-									</ul>
-									<button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<div class="row row-cols-1 row-cols-md-5 my-3 justify-content-center text-center">
-						<div class="col">
-							<div class="card mb-4 rounded-3 shadow-sm">
-								<div class="card-header py-3">
-									<h4 class="my-0 fw-normal">Free</h4>
-								</div>
-								<div class="card-body">
-									<h1 class="card-title pricing-card-title">
-										$0<small class="text-muted fw-light">/mo</small>
-									</h1>
-									<ul class="list-unstyled mt-3 mb-4">
-										<li>10 users included</li>
-										<li>2 GB of storage</li>
-										<li>Email support</li>
-										<li>Help center access</li>
-									</ul>
-									<button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
-								</div>
-							</div>
-						</div>
-						<div class="col">
-							<div class="card mb-4 rounded-3 shadow-sm">
-								<div class="card-header py-3">
-									<h4 class="my-0 fw-normal">Pro</h4>
-								</div>
-								<div class="card-body">
-									<h1 class="card-title pricing-card-title">
-										$15<small class="text-muted fw-light">/mo</small>
-									</h1>
-									<ul class="list-unstyled mt-3 mb-4">
-										<li>20 users included</li>
-										<li>10 GB of storage</li>
-										<li>Priority email support</li>
-										<li>Help center access</li>
-									</ul>
-									<button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
-								</div>
-							</div>
-						</div>
-						<div class="col">
-							<div class="card mb-4 rounded-3 shadow-sm border-primary">
-								<div class="card-header py-3 text-white bg-primary border-primary">
-									<h4 class="my-0 fw-normal">Enterprise</h4>
-								</div>
-								<div class="card-body">
-									<h1 class="card-title pricing-card-title">
-										$29<small class="text-muted fw-light">/mo</small>
-									</h1>
-									<ul class="list-unstyled mt-3 mb-4">
-										<li>30 users included</li>
-										<li>15 GB of storage</li>
-										<li>Phone and email support</li>
-										<li>Help center access</li>
-									</ul>
-									<button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
-								</div>
-							</div>
-						</div>
-					</div>
+		<div class="width80">
+			<div class="row">
+				<div class="col">
+					<span class="fs-3 fw-bold p-1">오늘의 발견</span>ㅣ 오늘 쿠팡이 엄선한 가장 HOT한 상품!
 				</div>
 			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="visually-hidden">Next</span>
-			</button>
+			
+			<div class="row">
+				<div class="col"></div>
+			
+			
+			</div>
+			
 		</div>
-
 	</div>
-	
-	
+
+
 
 
 	<script src="../../bootstrap/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
