--- a/public/durian/html/user/mainPage.html
+++ b/public/durian/html/user/mainPage.html
@@ -117,18 +117,31 @@
 			</button>
 		</div>
 		<!-- 광고 carousel e -->
-		<div class="width80">
-			<div class="row">
+		<div style="width: 80%; margin:auto;">
+			<div class="row mt-4">
 				<div class="col">
 					<span class="fs-3 fw-bold p-1">오늘의 발견</span>ㅣ 오늘 쿠팡이 엄선한 가장 HOT한 상품!
 				</div>
 			</div>
 			
-			<div class="row">
-				<div class="col"></div>
+			<div class="row border p-2">
+				<div class="col-6 ps-0"><button class="btn p-0"><img class="border" src="../../images/user/mainPage/todayHot1.png"></button></div>
+				<div class="col-6 ps-0"><button class="btn p-0"><img class="border" src="../../images/user/mainPage/todayHot2.png"></button></div>
+				
+				<div class="col-3 ps-0"><button class="btn p-0"><img class="border" src="../../images/user/mainPage/todayHot3.png"></button></div>
+				<div class="col-3 ps-0"><button class="btn p-0"><img class="border" src="../../images/user/mainPage/todayHot4.png"></button></div>
+				<div class="col-6 ps-0"><button class="btn p-0"><img class="border" src="../../images/user/mainPage/todayHot5.png"></button></div>
 			
 			
 			</div>
+			
+			
+			<div class="row mt-4">
+				<div class="col">
+					<i class="bi bi-bag-heart-fill fs-3 text-danger"></i><span class="fs-3 fw-bold p-1">오늘의 쇼핑 제안</span>
+				</div>
+			</div>
+			
 			
 		</div>
 	</div>
