--- a/public/durian/html/user/mainPage.html
+++ b/public/durian/html/user/mainPage.html
@@ -117,34 +117,127 @@
 			</button>
 		</div>
 		<!-- 광고 carousel e -->
-		<div style="width: 80%; margin:auto;">
+		<div class="width80">
 			<div class="row mt-4">
 				<div class="col">
 					<span class="fs-3 fw-bold p-1">오늘의 발견</span>ㅣ 오늘 쿠팡이 엄선한 가장 HOT한 상품!
 				</div>
 			</div>
-			
+
 			<div class="row border p-2">
-				<div class="col-6 ps-0"><button class="btn p-0"><img class="border" src="../../images/user/mainPage/todayHot1.png"></button></div>
-				<div class="col-6 ps-0"><button class="btn p-0"><img class="border" src="../../images/user/mainPage/todayHot2.png"></button></div>
-				
-				<div class="col-3 ps-0"><button class="btn p-0"><img class="border" src="../../images/user/mainPage/todayHot3.png"></button></div>
-				<div class="col-3 ps-0"><button class="btn p-0"><img class="border" src="../../images/user/mainPage/todayHot4.png"></button></div>
-				<div class="col-6 ps-0"><button class="btn p-0"><img class="border" src="../../images/user/mainPage/todayHot5.png"></button></div>
-			
-			
+				<div class="col-6 ps-0">
+					<button class="btn p-0">
+						<img class="border" src="../../images/user/mainPage/todayHot1.png">
+					</button>
+				</div>
+				<div class="col-6 ps-0">
+					<button class="btn p-0">
+						<img class="border" src="../../images/user/mainPage/todayHot2.png">
+					</button>
+				</div>
+
+				<div class="col-3 ps-0">
+					<button class="btn p-0">
+						<img class="border" src="../../images/user/mainPage/todayHot3.png">
+					</button>
+				</div>
+				<div class="col-3 ps-0">
+					<button class="btn p-0">
+						<img class="border" src="../../images/user/mainPage/todayHot4.png">
+					</button>
+				</div>
+				<div class="col-6 ps-0">
+					<button class="btn p-0">
+						<img class="border" src="../../images/user/mainPage/todayHot5.png">
+					</button>
+				</div>
+
+
 			</div>
-			
-			
-			<div class="row mt-4">
+
+
+			<div class="row my-4">
 				<div class="col">
 					<i class="bi bi-bag-heart-fill fs-3 text-danger"></i><span class="fs-3 fw-bold p-1">오늘의 쇼핑 제안</span>
 				</div>
 			</div>
-			
-			
-			
-			
+
+			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+				<div class="carousel-indicators">
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+						aria-current="true" aria-label="Slide 1"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+				</div>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<div class="row row-cols-5">
+							<div class="col">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct1.jpg">
+							</div>
+							<div class="col randomProduct">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct2.jpg">
+							</div>
+							<div class="col">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct3.jpg">
+							</div>
+							<div class="col">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct4.jpg">
+							</div>
+							<div class="col">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct5.jpg">
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div class="row row-cols-5">
+							<div class="col">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct6.jpg">
+							</div>
+							<div class="col randomProduct">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct7.jpg">
+							</div>
+							<div class="col">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct8.jpg">
+							</div>
+							<div class="col">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct9.jpg">
+							</div>
+							<div class="col">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct10.jpg">
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div class="row row-cols-5">
+							<div class="col">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct11.jpg">
+							</div>
+							<div class="col randomProduct">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct12.jpg">
+							</div>
+							<div class="col">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct13.jpg">
+							</div>
+							<div class="col">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct14.jpg">
+							</div>
+							<div class="col">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct15.jpg">
+							</div>
+						</div>
+					</div>
+				</div>
+				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="visually-hidden">Previous</span>
+				</button>
+				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="visually-hidden">Next</span>
+				</button>
+			</div>
+
+
+
 		</div>
 	</div>
 
