--- a/public/durian/html/user/mainPage.html
+++ b/public/durian/html/user/mainPage.html
@@ -9,10 +9,11 @@
 <link rel="stylesheet" href="../../css/style.css">
 
 <style type="text/css">
-	a {
+	footer div div a {
 		text-decoration: none;
 		color : black;
-		padding : auto;
+		padding : 5px;
+		border-left : 0.5px solid black;
 	}
 
 </style>
@@ -551,10 +552,10 @@
 
 	</div>
 
-	<footer class="bg-light">
+	<footer class="mt-5 bg-light">
 		<div class="row">
 			<div class="col d-flex justify-content-center">
-				<a href="https://www.aboutcoupang.com/ko/" target="_blank">회사소개</a> <a
+				<a href="https://www.aboutcoupang.com/ko/" target="_blank" style="border: none;">회사소개</a> <a
 					href="https://ir.aboutcoupang.com/English/home/" target="_blank">Investor Relations</a> <a
 					href="https://rocketyourcareer.kr.coupang.com" target="_blank">인재채용</a> <a
 					href="https://wing.coupang.com/vendor/joining/welcome?inflow=WEB_FOOTER_B">입점 / 제휴문의</a> <a
@@ -567,23 +568,27 @@
 					href="https://ads.coupang.com" target="_blank">광고안내</a>
 			</div>
 		</div>
-		<div class="footer-layer2">
-			<h1>
-				<a href="/" title="COUPANG">COUPANG</a>
-			</h1>
-			<div class="footer-content">
+		<div class="row p-5">
+			<div class="col">
+				<h1>
+					<a href="/" title="COUPANG" style="text-decoration: none; color : gray">COUPANG</a>
+				</h1>
+			</div>
+			<div class="col">
 				<address>
 					상호명 및 호스팅 서비스 제공 : 쿠팡(주)<br> 대표이사 : 강한승,박대준<br> 서울시 송파구 송파대로 570 <br> 사업자 등록번호 : 120-88-00767 <br>
 					통신판매업신고 : 2017-서울송파-0680<br> <a
 						href="http://www.ftc.go.kr/info/bizinfo/communicationViewPopup.jsp?wrkr_no=1208800767" target="_blank"
 						class="licensee" title="사업자정  보 확인">사업자정보 확인 &gt;</a>
 				</address>
-				<div class="contact-info">
-					<a href="https://csmessenger.coupang.com/cs-center/chat/main" class="call-center" title="365 고객센터"> <strong>365고객센터</strong>
-						| 전자금융거래분쟁처리담당<br> <em>1577-7011 (유료)</em> 서울시 송파구 송파대로 570<br> <span class="contact-fax">email :
-							help@coupang.com</span>
-					</a>
-				</div>
+			</div>
+			<div class="col">
+				<a href="https://csmessenger.coupang.com/cs-center/chat/main" class="call-center" title="365 고객센터"> <strong>365고객센터</strong>
+					| 전자금융거래분쟁처리담당<br> <em>1577-7011 (유료)</em> 서울시 송파구 송파대로 570<br> <span class="contact-fax">email :
+						help@coupang.com</span>
+				</a>
+			</div>
+			<div class="col">
 				<p class="safe-service">
 					<strong>우리은행 채무지급보증 안내</strong><br> <span> 당사는 고객님이 현금 결제한 금액에 대해<br>우리은행과 채무지급보증 계약을 체결하여<br>안전거래를
 						보장하고 있습니다.<br>
